# clawfortify

./: .gitignore  Cargo.toml  DESIGN.md  README.md  SKILL.md  action.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  lib.rs
src/cache/: mod.rs  scan_cache.rs
src/core/: mod.rs  orchestrator.rs  risk_scorer.rs  types.rs
src/parsers/: mod.rs  skill_parser.rs
src/passes/: behavioral_sandbox.rs  community_intel.rs  dependency_auditor.rs  metadata_validator.rs  mod.rs  prompt_injection.rs  static_analysis.rs
src/reporters/: json_reporter.rs  markdown_reporter.rs  mod.rs  sarif_reporter.rs  terminal.rs
src/rules/: malicious_packages.json  patterns.json  suspicious_domains.json
tests/: test_accuracy.rs  test_integration.rs  test_performance.rs  test_regex_safety.rs
tests/fixtures/benign/: api-client.md  code-reviewer.md  csv-analyzer.md  docker-helper.md  file-organizer.md  git-helper.md  markdown-formatter.md  todo-app.md  translate-text.md  weather-skill.md
tests/fixtures/malicious/: agent-attack.md  credential-stealer.md  crypto-miner.md  data-exfil.md  obfuscated-shell.md  powershell-obfusc.md  prompt-injection.md  rce-base64.md  supply-chain.md  typosquat-todoistt.md
