[package]
name = "clawfortify"
version = "0.1.1"
edition = "2021"
description = "AI Skill Security Scanner for the OpenClaw ecosystem"
license = "MIT"
repository = "https://github.com/clawfortify/clawfortify"
keywords = ["security", "scanner", "ai-skills", "openclaw"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
owo-colors = "4"
indicatif = "0.17"
strsim = "0.11"
sha2 = "0.10"
thiserror = "2"
notify = "7"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
